@@ -1,136 +1,134 @@
 package com.ecommerce.server.service;
 
-import com.ecommerce.server.dto.response.CategoryResponse;
 import com.ecommerce.server.dto.response.ProductResponse;
+import com.ecommerce.server.dto.response.ProductSuggestionResponse;
 import com.ecommerce.server.dto.response.ProductVariantResponse;
 import com.ecommerce.server.models.Product;
 import com.ecommerce.server.models.ProductImage;
 import com.ecommerce.server.models.ProductVariant;
-import com.ecommerce.server.models.Category;
 import com.ecommerce.server.models.enums.Color;
 import com.ecommerce.server.models.enums.DressStyle;
+import com.ecommerce.server.models.enums.ProductSort;
 import com.ecommerce.server.models.enums.Size;
-import com.ecommerce.server.repository.CategoryRepository;
+import com.ecommerce.server.exception.ResourceNotFoundException;
 import com.ecommerce.server.repository.ProductRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final CategoryRepository categoryRepository;
 
-    public ProductService(ProductRepository productRepository,
-                         CategoryRepository categoryRepository) {
-        this.productRepository = productRepository;
-        this.categoryRepository = categoryRepository;
-    }
+    public Page<ProductResponse> getFilteredProducts(
+            String categoryName,
+            BigDecimal minPrice,
+            BigDecimal maxPrice,
+            List<Color> colors,
+            List<Size> sizes,
+            DressStyle dressStyle,
+            Boolean onSale,
+            Boolean bestSelling,
+            Boolean topSelling,
+            String brandName,
+            String productTypeName,
+            ProductSort sort,
+            Double minRating,
+            Pageable pageable) {
 
-    // Λήψη όλων των προϊόντων με pagination
-    public Page<ProductResponse> getAllProducts(Pageable pageable) {
-        return productRepository.findAll(pageable)
-                .map(this::convertToResponse);
-    }
+        boolean filterByColors = colors != null && !colors.isEmpty();
+        boolean filterBySizes  = sizes  != null && !sizes.isEmpty();
 
-    // Λήψη προϊόντων κατά κατηγορία
-    public Page<ProductResponse> getProductsByCategory(Long categoryId, Pageable pageable) {
-        // Έλεγχος ότι υπάρχει η κατηγορία
-        if (!categoryRepository.existsById(categoryId)) {
-            throw new RuntimeException("Category not found");
+        String normalizedCategory    = categoryName    != null ? categoryName.toLowerCase()    : null;
+        String normalizedBrand       = brandName       != null ? brandName.toLowerCase()       : null;
+        String normalizedProductType = productTypeName != null ? productTypeName.toLowerCase() : null;
+
+        if (topSelling != null && topSelling) {
+            return productRepository.findTopSellingProducts(
+                    normalizedCategory, minPrice, maxPrice,
+                    filterByColors ? colors : List.of(Color.RED), filterByColors,
+                    filterBySizes  ? sizes  : List.of(Size.M),   filterBySizes,
+                    dressStyle,
+                    onSale      != null && onSale,
+                    bestSelling != null && bestSelling,
+                    normalizedBrand, normalizedProductType, minRating, pageable
+            ).map(this::convertToResponse);
         }
 
-        return productRepository.findByCategoryId(categoryId, pageable)
-                .map(this::convertToResponse);
+        if (sort != null) {
+            Sort s = switch (sort) {
+                case NEWEST       -> Sort.by(Sort.Direction.DESC, "createdAt");
+                case MOST_POPULAR -> Sort.by(Sort.Direction.DESC, "reviewCount");
+                case PRICE_ASC    -> Sort.by(Sort.Direction.ASC,  "price");
+                case PRICE_DESC   -> Sort.by(Sort.Direction.DESC, "price");
+            };
+            pageable = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), s);
+        }
+
+        return productRepository.findByFilters(
+                normalizedCategory,
+                minPrice, maxPrice,
+                filterByColors ? colors : List.of(Color.RED), filterByColors,
+                filterBySizes  ? sizes  : List.of(Size.M),   filterBySizes,
+                dressStyle,
+                onSale      != null && onSale,
+                bestSelling != null && bestSelling,
+                normalizedBrand, normalizedProductType, minRating, pageable
+        ).map(this::convertToResponse);
     }
 
-    // Αναζήτηση προϊόντων κατά όνομα
     public Page<ProductResponse> searchProducts(String query, Pageable pageable) {
         return productRepository.findByNameContainingIgnoreCase(query, pageable)
                 .map(this::convertToResponse);
     }
 
-    // Φιλτραρίσματα προϊόντων κατά τιμή
-    public Page<ProductResponse> filterByPrice(BigDecimal minPrice, BigDecimal maxPrice, Pageable pageable) {
-        return productRepository.findByPriceBetween(minPrice, maxPrice, pageable)
-                .map(this::convertToResponse);
+    public List<ProductSuggestionResponse> autocomplete(String query) {
+        return productRepository.findTop8ByNameContainingIgnoreCase(query)
+                .stream()
+                .map(p -> new ProductSuggestionResponse(
+                        p.getId(),
+                        p.getName(),
+                        p.getImages().isEmpty() ? null : p.getImages().get(0).getImageUrl()
+                ))
+                .toList();
     }
 
-     // Φίλτραρίσμα προϊόντων κατά κατηγορία ΚΑΙ τιμή
-     public Page<ProductResponse> filterByCategoryAndPrice(Long categoryId, BigDecimal minPrice,
-                                                          BigDecimal maxPrice, Pageable pageable) {
-         return productRepository.findByCategoryAndPriceRange(categoryId, minPrice, maxPrice, pageable)
-                 .map(this::convertToResponse);
-     }
-
-     // Φίλτραρίσμα με πολλαπλά κριτήρια (τιμή, χρώμα, size, dress style)
-     public Page<ProductResponse> getFilteredProducts(
-             BigDecimal minPrice,
-             BigDecimal maxPrice,
-             Color color,
-             Size size,
-             DressStyle dressStyle,
-             Pageable pageable) {
-         return productRepository.findByFilters(minPrice, maxPrice, color, size, dressStyle, pageable)
-                 .map(this::convertToResponse);
-     }
-
-    // Λήψη λεπτομερειών ενός προϊόντος
     public ProductResponse getProductDetail(Long productId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
         return convertToResponse(product);
     }
 
-    // Λήψη όλων των variants (χρώμα + size συνδυασμοί) ενός προϊόντος
     public List<ProductVariantResponse> getProductVariants(Long productId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
         return product.getVariants().stream()
                 .map(this::convertVariantToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Λήψη όλων των κατηγοριών
-    public List<CategoryResponse> getAllCategories() {
-        return categoryRepository.findAll().stream()
-                .map(this::convertCategoryToResponse)
-                .collect(Collectors.toList());
-    }
-
-    // Λήψη κατηγορίας κατά ID
-    public CategoryResponse getCategory(Long categoryId) {
-        Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found"));
-        return convertCategoryToResponse(category);
-    }
-
-    // Μετατροπή Product Entity σε ProductResponse DTO
-    private ProductResponse convertToResponse(Product product) {
-        // Λήψη image URLs
+    public ProductResponse convertToResponse(Product product) {
         List<String> imageUrls = product.getImages().stream()
                 .map(ProductImage::getImageUrl)
-                .collect(Collectors.toList());
-
-        // Λήψη variants
+                .toList();
         List<ProductVariantResponse> variants = product.getVariants().stream()
                 .map(this::convertVariantToResponse)
-                .collect(Collectors.toList());
-
+                .toList();
         return new ProductResponse(
                 product.getId(),
                 product.getName(),
                 product.getDescription(),
                 product.getCategory().getName(),
                 product.getBrand().getName(),
-                product.getProductType().toString(),
+                product.getProductType().getName(),
                 product.getDressStyle().toString(),
                 product.getPrice(),
                 product.getOriginalPrice(),
@@ -142,30 +140,15 @@ public class ProductService {
         );
     }
 
-    // Μετατροπή ProductVariant Entity σε ProductVariantResponse DTO
     private ProductVariantResponse convertVariantToResponse(ProductVariant variant) {
         return new ProductVariantResponse(
                 variant.getId(),
                 variant.getColor().toString(),
+                variant.getColor().getHexCode(),
                 variant.getSize().toString(),
                 variant.getStockQuantity(),
                 variant.getSku(),
                 variant.getProduct().getPrice()
         );
     }
-
-    // Μετατροπή Category Entity σε CategoryResponse DTO
-    private CategoryResponse convertCategoryToResponse(Category category) {
-        // Υπολογισμός πλήθους προϊόντων στη κατηγορία
-        long productCount = productRepository.findByCategoryId(category.getId(), PageRequest.of(0, 1)).getTotalElements();
-
-        return new CategoryResponse(
-                category.getId(),
-                category.getName(),
-                category.getDescription(),
-                category.getImageUrl(),
-                (int) productCount
-        );
-    }
 }
-
